# scratchlearn

./: .gitignore  DEVLOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/derivations/: decision_tree.md  gmm_em.md  kmeans.md  linear_regression.md  logistic_regression.md  mlp_backprop.md  pca.md
examples/: 01_linear_models.ipynb  02_pca_and_clustering.ipynb  03_trees_vs_knn.ipynb  04_mlp_on_digits.ipynb
src/scratchlearn/: __init__.py  _validation.py  base.py  cluster.py  decomposition.py  exceptions.py  linear_model.py  metrics.py  model_selection.py  neighbors.py  neural.py  tree.py
tests/: README.md  test_cluster.py  test_decomposition.py  test_linear_model.py  test_metrics.py  test_model_selection.py  test_neighbors.py  test_neural.py  test_properties.py  test_tree.py
